--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ readme = "README.md"
 requires-python = ">=3.14"
 dependencies = [
     "markdown-it-py>=4.0.0",
-    "pymupdf>=1.26.7",
+    "weasyprint>=68.0",
 ]
 
 [dependency-groups]
