--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "publishes my resume"
 readme = "README.md"
 requires-python = ">=3.14"
 dependencies = [
+    "jinja2>=3.1.6",
     "markdown-it-py>=4.0.0",
     "weasyprint>=68.0",
 ]
