--- a/.woodpecker.yml
+++ b/.woodpecker.yml
@@ -35,7 +35,7 @@ steps:
         from_secret: ssh_deploy_key
       port: 25213
       target: /home/httpcd/resume/
-      source: ./resume.*
+      source: ./publish/resume.*
       strip_components: 1
       rm: false
       commands:
