--- a/templates/resume.template
+++ b/templates/resume.template
@@ -57,12 +57,7 @@
     }
   </style>
 </head>
-
-<div id="download-bar"
-  style="position: sticky; top: 0; background: #f5f5f5; padding: 10px; text_align: center; border-bottom: 1px solid #ddd; z-index: 100;">
-  Download:
-  <a href="/resume/resume.pdf">Resume (PDF)</a>
-</div>
+{{ download }}
 
 <body>
   {{ content }}
