--- a/templates/download.template
+++ b/templates/download.template
@@ -1,4 +1,4 @@
 <div id="download-bar" style="position: sticky; top: 0; background: #f5f5f5; padding: 10px; text-align: center; border-bottom: 1px solid #ddd; z-index: 100;">
   Download: 
-  <a href="/resume/resume.pdf">Resume (PDF)</a>
+  <a href="/resume/{{ pdffile }}">Resume (PDF)</a>
 </div>
