--- a/templates/resume.template
+++ b/templates/resume.template
@@ -8,14 +8,14 @@
     /* PDF page settings - Weasyprint */
     @page {
       size: letter;
-      margin: 0.75in;
+      margin: 0.5in 0.75in;
     }
 
     /* reset body -let @page handle margins */
 
     * {
       margin: 0;
-      padding 0;
+      padding: 0;
       box-sizing: border-box;
     }
 
@@ -23,7 +23,7 @@
       font-family: Arial, sans-serif;
       font-size: 11pt;
       line-height: 1.3;
-      color #000;
+      color: #000;
     }
 
     /* contact section */
@@ -64,6 +64,12 @@
       margin-top: 0;
     }
 
+    #experience {
+      width: 100%;
+      margin: 0;
+      padding: 0;
+    }
+
     .job-entry {
       margin-bottom: 12pt;
       page-break-inside: avoid;
@@ -73,15 +79,17 @@
       margin-bottom: 0;
     }
 
+
+
     /* experience tables */
-    #exprience-table {
+    #experience-table {
       width: 100%;
       border-collapse: collapse;
       margin: 0 0 4pt 0;
       table-layout: fixed;
     }
 
-    #exprience-table td {
+    #experience-table td {
       vertical-align: top;
       font-size: 10pt;
       padding: 0;
@@ -111,13 +119,13 @@
 
     /* paragraphs */
     p {
-      margin: 4pt 0,
-        font-size: 10pt;
+      margin: 4pt 0;
+      font-size: 10pt;
     }
 
     /* lists */
     ul {
-      marginL 4pt 0 8pt 0;
+      margin: 4pt 0 8pt 0;
       padding-left: 18pt;
       list-style-type: disc;
     }
